Don't DCHECK on aggregating quads with noninvertible transforms.

It's possible that the renderer could send these legitimately.

BUG=600886
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1883533008

Cr-Commit-Position: refs/heads/master@{#387495}

Former-commit-id: 2c859fdc9391ee6988071a3cb84c25145cfc9a4c